[package]
name = "walitool"
version = "0.1.0"
edition = "2021"
description = "A scientific computing library for Python written in Rust (Entropy Weight Method)."
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/your_github_id/walitool"
readme = "README.md"

[lib]
name = "walitool"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
numpy = "0.23.0"
ndarray = "0.16.1"

[profile.release]
strip = true
lto = true
codegen-units = 1