[package]
name = "walitool"
version = "0.1.8"
edition = "2021"
description = "A scientific computing library for Python written in Rust."
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/your_github_id/walitool"
readme = "README.md"

include = [
    "/src",
    "/Cargo.toml",
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/python"
]

[lib]
name = "walitool"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module", "abi3-py38"] }
numpy = "0.23.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
rayon = "1.11.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"

[profile.release]
strip = true
lto = true
codegen-units = 1